--- a/src/_templates_/site.html
+++ b/src/_templates_/site.html
@@ -6,12 +6,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/static/iconfont/github-markdown.css" type="text/css">
+    <link rel="stylesheet" href="/style/github-markdown.css" type="text/css">
     <title>Site</title>
 </head>
 
 <body>
     <div id="root"></div>
 </body>
+<style>
+    * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+        font-family: 'Roboto', sans-serif;
+    }
+
+    body {
+        text-align: center;
+    }
+</style>
 
 </html>
