--- a/src/_templates_/site.html
+++ b/src/_templates_/site.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-    <link rel="shortcut icon" href="/static/demo.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/static/images/demo.ico" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/style/github-markdown.css" type="text/css">
+    <link rel="stylesheet" href="/static/style/github-markdown.css" type="text/css">
     <title>Site</title>
 </head>
 
