--- a/src/_templates_/siteExpo.html
+++ b/src/_templates_/siteExpo.html
@@ -22,6 +22,16 @@
 
     body {
         text-align: center;
+        background: #f6f6f6;
+    }
+
+    ul {
+        list-style-type: none;
+    }
+
+    #root {
+        width: 100vw;
+        margin: 0 auto;
     }
 
     /* #root {
