site expo finalization

--- a/src/_templates_/siteExpo.html
+++ b/src/_templates_/siteExpo.html
@@ -23,6 +23,7 @@
     body {
         text-align: center;
         background: #f6f6f6;
+        overflow-x: hidden;
     }
 
     ul {
@@ -32,6 +33,7 @@
     #root {
         width: 100vw;
         margin: 0 auto;
+        overflow-x: hidden;
     }
 
     /* #root {
