--- a/src/_templates_/3dlsPromo.html
+++ b/src/_templates_/3dlsPromo.html
@@ -17,10 +17,20 @@
         padding: 0;
         margin: 0;
         box-sizing: border-box;
-        font-family: 'Roboto', sans-serif;
+        font-family:'3dslight';
+    }
+
+    html {
+        /* height: 100%;
+        background-image: url(./static/svg/backdrop.svg);
+        background-size: 100% 100%;
+        -o-background-size: 100% 100%;
+        -webkit-background-size: 100% 100%;
+        background-size: cover; */
     }
 
     #root {
+        font-family: inherit;
         overflow-x: hidden;
     }
 </style>
