--- a/src/_templates_/3dlsPromo.html
+++ b/src/_templates_/3dlsPromo.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <!-- <link rel="shortcut icon" href="/static/demo.ico" type="image/x-icon"> -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>CLS Carousel</title>
-</head>
+    <meta name="description" content="An online learning portal to master Dassault Systèmes products and solutions. Anywhere, any place, any time...">  
+    <link rel="shortcut icon" href="./static/img/favicon.ico" type="image/x-icon">
+    <title>Dassault Systèmes : 3DS Learning Space</title>
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+        ga('create', 'UA-32554570-1', 'auto');
+        ga('send', 'pageview');      
+    </script>
+</head>
 <body>
     <div id="root"></div>
 </body>
@@ -20,18 +28,11 @@
         font-family:'3dslight';
     }
 
-    html {
-        /* height: 100%;
-        background-image: url(./static/svg/backdrop.svg);
-        background-size: 100% 100%;
-        -o-background-size: 100% 100%;
-        -webkit-background-size: 100% 100%;
-        background-size: cover; */
-    }
-
     #root {
         font-family: inherit;
         overflow-x: hidden;
+        position: absolute;
+        top: 0;
     }
 </style>
 
