--- a/src/_templates_/3dlsPromo.html
+++ b/src/_templates_/3dlsPromo.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description"
         content="An online learning portal to master Dassault Systèmes products and solutions. Anywhere, any place, any time...">
-     
-    <link rel="shortcut icon" href="./static/img/favicon.ico" type="image/x-icon">
+    <!-- <base href="/updl/NewDashboard/public/" /> -->
     <title>Dassault Systèmes : 3DS Learning Space</title>
     <script>
         (function (i, s, o, g, r, a, m) {
@@ -39,6 +39,7 @@
         overflow-x: hidden;
         position: absolute;
         top: 0;
+        width:100%;
     }
 </style>
 
