--- a/src/_templates_/demo_carousel.html
+++ b/src/_templates_/demo_carousel.html
@@ -4,7 +4,7 @@
 <head>
     <!-- <link rel="shortcut icon" href="/static/demo.ico" type="image/x-icon"> -->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CLS Carousel</title>
 </head>
