--- a/src/_templates_/wef.html
+++ b/src/_templates_/wef.html
@@ -36,7 +36,7 @@
 
     #root {
         font-family: inherit;
-        overflow-x: hidden;
+        overflow: hidden;
         position: absolute;
         top: 0;
         width:100%;
